y.output
Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: %empty
    3                         | FunctionDefinition FunctionsAndDeclarations
    4                         | FunctionDeclaration FunctionsAndDeclarations
    5                         | Declaration FunctionsAndDeclarations

    6 FunctionDefinition: Typespec FunctionDeclarator FunctionBody

    7 FunctionBody: LBRACE DeclarationsAndStatements RBRACE
    8             | LBRACE RBRACE

    9 DeclarationsAndStatements: DeclarationsAndStatements Statement
   10                          | DeclarationsAndStatements Declaration
   11                          | Declaration
   12                          | Statement

   13 FunctionDeclaration: Typespec FunctionDeclarator SEMI

   14 FunctionDeclarator: IdToken LPAR ParameterList RPAR

   15 ParameterList: ParameterDeclaration
   16              | ParameterList COMMA ParameterDeclaration

   17 ParameterDeclaration: Typespec
   18                     | Typespec IdToken

   19 Declaration: Typespec DeclarationAux SEMI
   20            | error SEMI

   21 DeclarationAux: DeclarationAux COMMA Declarator
   22               | Declarator

   23 Declarator: IdToken
   24           | IdToken ASSIGN Expr

   25 Statement: LBRACE StatementList RBRACE
   26          | ArgList SEMI
   27          | SEMI
   28          | IF LPAR ArgList RPAR StatementError
   29          | IF LPAR ArgList RPAR StatementError ELSE StatementError
   30          | WHILE LPAR Expr RPAR StatementError
   31          | RETURN Expr SEMI
   32          | RETURN SEMI
   33          | LBRACE error RBRACE
   34          | LBRACE RBRACE

   35 StatementList: StatementError StatementList
   36              | StatementError

   37 StatementError: Statement
   38               | error SEMI

   39 ArgList: Expr
   40        | ArgList COMMA Expr

   41 FuncCallArgList: Expr
   42                | FuncCallArgList COMMA Expr

   43 FunctionCall: IdToken LPAR FuncCallArgList RPAR
   44             | IdToken LPAR RPAR
   45             | IdToken LPAR error RPAR

   46 Expr: Expr ASSIGN Expr
   47     | Expr MUL Expr
   48     | Expr DIV Expr
   49     | Expr PLUS Expr
   50     | Expr MINUS Expr
   51     | Expr MOD Expr
   52     | Expr AND Expr
   53     | Expr OR Expr
   54     | Expr BITWISEAND Expr
   55     | Expr BITWISEOR Expr
   56     | Expr BITWISEXOR Expr
   57     | Expr EQ Expr
   58     | Expr NE Expr
   59     | Expr GE Expr
   60     | Expr GT Expr
   61     | Expr LE Expr
   62     | Expr LT Expr
   63     | NOT Expr
   64     | PLUS Expr
   65     | MINUS Expr
   66     | FunctionCall
   67     | LPAR ArgList RPAR
   68     | LPAR error RPAR
   69     | IdToken
   70     | INTLIT
   71     | CHRLIT
   72     | REALLIT

   73 Typespec: CHAR
   74         | INT
   75         | SHORT
   76         | DOUBLE
   77         | VOID

   78 IdToken: ID


Terminals, with rules where they appear

$end (0) 0
error (256) 20 33 38 45 68
MINUS (258) 50 65
PLUS (259) 49 64
MUL (260) 47
DIV (261) 48
MOD (262) 51
BITWISEAND (263) 54
BITWISEOR (264) 55
BITWISEXOR (265) 56
AND (266) 52
NOT (267) 63
OR (268) 53
EQ (269) 57
NE (270) 58
LE (271) 61
GE (272) 59
LT (273) 62
GT (274) 60
CHAR (275) 73
INT (276) 74
SHORT (277) 75
DOUBLE (278) 76
VOID (279) 77
IF (280) 28 29
ELSE (281) 29
WHILE (282) 30
RETURN (283) 31 32
ASSIGN (284) 24 46
COMMA (285) 16 21 40 42
LBRACE (286) 7 8 25 33 34
RBRACE (287) 7 8 25 33 34
LPAR (288) 14 28 29 30 43 44 45 67 68
RPAR (289) 14 28 29 30 43 44 45 67 68
SEMI (290) 13 19 20 26 27 31 32 38
ID (291) 78
CHRLIT (292) 71
INTLIT (293) 70
REALLIT (294) 72


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Program (41)
    on left: 1, on right: 0
FunctionsAndDeclarations (42)
    on left: 2 3 4 5, on right: 1 3 4 5
FunctionDefinition (43)
    on left: 6, on right: 3
FunctionBody (44)
    on left: 7 8, on right: 6
DeclarationsAndStatements (45)
    on left: 9 10 11 12, on right: 7 9 10
FunctionDeclaration (46)
    on left: 13, on right: 4
FunctionDeclarator (47)
    on left: 14, on right: 6 13
ParameterList (48)
    on left: 15 16, on right: 14 16
ParameterDeclaration (49)
    on left: 17 18, on right: 15 16
Declaration (50)
    on left: 19 20, on right: 5 10 11
DeclarationAux (51)
    on left: 21 22, on right: 19 21
Declarator (52)
    on left: 23 24, on right: 21 22
Statement (53)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 9 12 37
StatementList (54)
    on left: 35 36, on right: 25 35
StatementError (55)
    on left: 37 38, on right: 28 29 30 35 36
ArgList (56)
    on left: 39 40, on right: 26 28 29 40 67
FuncCallArgList (57)
    on left: 41 42, on right: 42 43
FunctionCall (58)
    on left: 43 44 45, on right: 66
Expr (59)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 66 67 68 69 70 71 72, on right: 24 30 31 39 40 41 42 46 47
    48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
Typespec (60)
    on left: 73 74 75 76 77, on right: 6 13 17 18 19
IdToken (61)
    on left: 78, on right: 14 18 23 24 43 44 45 69


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 2 (FunctionsAndDeclarations)

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    Typespec                  go to state 12


State 1

   20 Declaration: error . SEMI

    SEMI  shift, and go to state 13


State 2

   73 Typespec: CHAR .

    $default  reduce using rule 73 (Typespec)


State 3

   74 Typespec: INT .

    $default  reduce using rule 74 (Typespec)


State 4

   75 Typespec: SHORT .

    $default  reduce using rule 75 (Typespec)


State 5

   76 Typespec: DOUBLE .

    $default  reduce using rule 76 (Typespec)


State 6

   77 Typespec: VOID .

    $default  reduce using rule 77 (Typespec)


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 8

    1 Program: FunctionsAndDeclarations .

    $default  reduce using rule 1 (Program)


State 9

    3 FunctionsAndDeclarations: FunctionDefinition . FunctionsAndDeclarations

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 2 (FunctionsAndDeclarations)

    FunctionsAndDeclarations  go to state 15
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    Typespec                  go to state 12


State 10

    4 FunctionsAndDeclarations: FunctionDeclaration . FunctionsAndDeclarations

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 2 (FunctionsAndDeclarations)

    FunctionsAndDeclarations  go to state 16
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    Typespec                  go to state 12


State 11

    5 FunctionsAndDeclarations: Declaration . FunctionsAndDeclarations

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 2 (FunctionsAndDeclarations)

    FunctionsAndDeclarations  go to state 17
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    Typespec                  go to state 12


State 12

    6 FunctionDefinition: Typespec . FunctionDeclarator FunctionBody
   13 FunctionDeclaration: Typespec . FunctionDeclarator SEMI
   19 Declaration: Typespec . DeclarationAux SEMI

    ID  shift, and go to state 18

    FunctionDeclarator  go to state 19
    DeclarationAux      go to state 20
    Declarator          go to state 21
    IdToken             go to state 22


State 13

   20 Declaration: error SEMI .

    $default  reduce using rule 20 (Declaration)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    3 FunctionsAndDeclarations: FunctionDefinition FunctionsAndDeclarations .

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 16

    4 FunctionsAndDeclarations: FunctionDeclaration FunctionsAndDeclarations .

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 17

    5 FunctionsAndDeclarations: Declaration FunctionsAndDeclarations .

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 18

   78 IdToken: ID .

    $default  reduce using rule 78 (IdToken)


State 19

    6 FunctionDefinition: Typespec FunctionDeclarator . FunctionBody
   13 FunctionDeclaration: Typespec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 23
    SEMI    shift, and go to state 24

    FunctionBody  go to state 25


State 20

   19 Declaration: Typespec DeclarationAux . SEMI
   21 DeclarationAux: DeclarationAux . COMMA Declarator

    COMMA  shift, and go to state 26
    SEMI   shift, and go to state 27


State 21

   22 DeclarationAux: Declarator .

    $default  reduce using rule 22 (DeclarationAux)


State 22

   14 FunctionDeclarator: IdToken . LPAR ParameterList RPAR
   23 Declarator: IdToken .
   24           | IdToken . ASSIGN Expr

    ASSIGN  shift, and go to state 28
    LPAR    shift, and go to state 29

    $default  reduce using rule 23 (Declarator)


State 23

    7 FunctionBody: LBRACE . DeclarationsAndStatements RBRACE
    8             | LBRACE . RBRACE

    error    shift, and go to state 1
    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    CHAR     shift, and go to state 2
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    VOID     shift, and go to state 6
    IF       shift, and go to state 33
    WHILE    shift, and go to state 34
    RETURN   shift, and go to state 35
    LBRACE   shift, and go to state 36
    RBRACE   shift, and go to state 37
    LPAR     shift, and go to state 38
    SEMI     shift, and go to state 39
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    DeclarationsAndStatements  go to state 43
    Declaration                go to state 44
    Statement                  go to state 45
    ArgList                    go to state 46
    FunctionCall               go to state 47
    Expr                       go to state 48
    Typespec                   go to state 49
    IdToken                    go to state 50


State 24

   13 FunctionDeclaration: Typespec FunctionDeclarator SEMI .

    $default  reduce using rule 13 (FunctionDeclaration)


State 25

    6 FunctionDefinition: Typespec FunctionDeclarator FunctionBody .

    $default  reduce using rule 6 (FunctionDefinition)


State 26

   21 DeclarationAux: DeclarationAux COMMA . Declarator

    ID  shift, and go to state 18

    Declarator  go to state 51
    IdToken     go to state 52


State 27

   19 Declaration: Typespec DeclarationAux SEMI .

    $default  reduce using rule 19 (Declaration)


State 28

   24 Declarator: IdToken ASSIGN . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 53
    IdToken       go to state 50


State 29

   14 FunctionDeclarator: IdToken LPAR . ParameterList RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 54
    ParameterDeclaration  go to state 55
    Typespec              go to state 56


State 30

   65 Expr: MINUS . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 57
    IdToken       go to state 50


State 31

   64 Expr: PLUS . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 58
    IdToken       go to state 50


State 32

   63 Expr: NOT . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 59
    IdToken       go to state 50


State 33

   28 Statement: IF . LPAR ArgList RPAR StatementError
   29          | IF . LPAR ArgList RPAR StatementError ELSE StatementError

    LPAR  shift, and go to state 60


State 34

   30 Statement: WHILE . LPAR Expr RPAR StatementError

    LPAR  shift, and go to state 61


State 35

   31 Statement: RETURN . Expr SEMI
   32          | RETURN . SEMI

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    SEMI     shift, and go to state 62
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 63
    IdToken       go to state 50


State 36

   25 Statement: LBRACE . StatementList RBRACE
   33          | LBRACE . error RBRACE
   34          | LBRACE . RBRACE

    error    shift, and go to state 64
    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    IF       shift, and go to state 33
    WHILE    shift, and go to state 34
    RETURN   shift, and go to state 35
    LBRACE   shift, and go to state 36
    RBRACE   shift, and go to state 65
    LPAR     shift, and go to state 38
    SEMI     shift, and go to state 39
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    Statement       go to state 66
    StatementList   go to state 67
    StatementError  go to state 68
    ArgList         go to state 46
    FunctionCall    go to state 47
    Expr            go to state 48
    IdToken         go to state 50


State 37

    8 FunctionBody: LBRACE RBRACE .

    $default  reduce using rule 8 (FunctionBody)


State 38

   67 Expr: LPAR . ArgList RPAR
   68     | LPAR . error RPAR

    error    shift, and go to state 69
    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    ArgList       go to state 70
    FunctionCall  go to state 47
    Expr          go to state 48
    IdToken       go to state 50


State 39

   27 Statement: SEMI .

    $default  reduce using rule 27 (Statement)


State 40

   71 Expr: CHRLIT .

    $default  reduce using rule 71 (Expr)


State 41

   70 Expr: INTLIT .

    $default  reduce using rule 70 (Expr)


State 42

   72 Expr: REALLIT .

    $default  reduce using rule 72 (Expr)


State 43

    7 FunctionBody: LBRACE DeclarationsAndStatements . RBRACE
    9 DeclarationsAndStatements: DeclarationsAndStatements . Statement
   10                          | DeclarationsAndStatements . Declaration

    error    shift, and go to state 1
    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    CHAR     shift, and go to state 2
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    VOID     shift, and go to state 6
    IF       shift, and go to state 33
    WHILE    shift, and go to state 34
    RETURN   shift, and go to state 35
    LBRACE   shift, and go to state 36
    RBRACE   shift, and go to state 71
    LPAR     shift, and go to state 38
    SEMI     shift, and go to state 39
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    Declaration   go to state 72
    Statement     go to state 73
    ArgList       go to state 46
    FunctionCall  go to state 47
    Expr          go to state 48
    Typespec      go to state 49
    IdToken       go to state 50


State 44

   11 DeclarationsAndStatements: Declaration .

    $default  reduce using rule 11 (DeclarationsAndStatements)


State 45

   12 DeclarationsAndStatements: Statement .

    $default  reduce using rule 12 (DeclarationsAndStatements)


State 46

   26 Statement: ArgList . SEMI
   40 ArgList: ArgList . COMMA Expr

    COMMA  shift, and go to state 74
    SEMI   shift, and go to state 75


State 47

   66 Expr: FunctionCall .

    $default  reduce using rule 66 (Expr)


State 48

   39 ArgList: Expr .
   46 Expr: Expr . ASSIGN Expr
   47     | Expr . MUL Expr
   48     | Expr . DIV Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MOD Expr
   52     | Expr . AND Expr
   53     | Expr . OR Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . GE Expr
   60     | Expr . GT Expr
   61     | Expr . LE Expr
   62     | Expr . LT Expr

    MINUS       shift, and go to state 76
    PLUS        shift, and go to state 77
    MUL         shift, and go to state 78
    DIV         shift, and go to state 79
    MOD         shift, and go to state 80
    BITWISEAND  shift, and go to state 81
    BITWISEOR   shift, and go to state 82
    BITWISEXOR  shift, and go to state 83
    AND         shift, and go to state 84
    OR          shift, and go to state 85
    EQ          shift, and go to state 86
    NE          shift, and go to state 87
    LE          shift, and go to state 88
    GE          shift, and go to state 89
    LT          shift, and go to state 90
    GT          shift, and go to state 91
    ASSIGN      shift, and go to state 92

    $default  reduce using rule 39 (ArgList)


State 49

   19 Declaration: Typespec . DeclarationAux SEMI

    ID  shift, and go to state 18

    DeclarationAux  go to state 20
    Declarator      go to state 21
    IdToken         go to state 52


State 50

   43 FunctionCall: IdToken . LPAR FuncCallArgList RPAR
   44             | IdToken . LPAR RPAR
   45             | IdToken . LPAR error RPAR
   69 Expr: IdToken .

    LPAR  shift, and go to state 93

    $default  reduce using rule 69 (Expr)


State 51

   21 DeclarationAux: DeclarationAux COMMA Declarator .

    $default  reduce using rule 21 (DeclarationAux)


State 52

   23 Declarator: IdToken .
   24           | IdToken . ASSIGN Expr

    ASSIGN  shift, and go to state 28

    $default  reduce using rule 23 (Declarator)


State 53

   24 Declarator: IdToken ASSIGN Expr .
   46 Expr: Expr . ASSIGN Expr
   47     | Expr . MUL Expr
   48     | Expr . DIV Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MOD Expr
   52     | Expr . AND Expr
   53     | Expr . OR Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . GE Expr
   60     | Expr . GT Expr
   61     | Expr . LE Expr
   62     | Expr . LT Expr

    MINUS       shift, and go to state 76
    PLUS        shift, and go to state 77
    MUL         shift, and go to state 78
    DIV         shift, and go to state 79
    MOD         shift, and go to state 80
    BITWISEAND  shift, and go to state 81
    BITWISEOR   shift, and go to state 82
    BITWISEXOR  shift, and go to state 83
    AND         shift, and go to state 84
    OR          shift, and go to state 85
    EQ          shift, and go to state 86
    NE          shift, and go to state 87
    LE          shift, and go to state 88
    GE          shift, and go to state 89
    LT          shift, and go to state 90
    GT          shift, and go to state 91
    ASSIGN      shift, and go to state 92

    $default  reduce using rule 24 (Declarator)


State 54

   14 FunctionDeclarator: IdToken LPAR ParameterList . RPAR
   16 ParameterList: ParameterList . COMMA ParameterDeclaration

    COMMA  shift, and go to state 94
    RPAR   shift, and go to state 95


State 55

   15 ParameterList: ParameterDeclaration .

    $default  reduce using rule 15 (ParameterList)


State 56

   17 ParameterDeclaration: Typespec .
   18                     | Typespec . IdToken

    ID  shift, and go to state 18

    $default  reduce using rule 17 (ParameterDeclaration)

    IdToken  go to state 96


State 57

   46 Expr: Expr . ASSIGN Expr
   47     | Expr . MUL Expr
   48     | Expr . DIV Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MOD Expr
   52     | Expr . AND Expr
   53     | Expr . OR Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . GE Expr
   60     | Expr . GT Expr
   61     | Expr . LE Expr
   62     | Expr . LT Expr
   65     | MINUS Expr .

    $default  reduce using rule 65 (Expr)


State 58

   46 Expr: Expr . ASSIGN Expr
   47     | Expr . MUL Expr
   48     | Expr . DIV Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MOD Expr
   52     | Expr . AND Expr
   53     | Expr . OR Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . GE Expr
   60     | Expr . GT Expr
   61     | Expr . LE Expr
   62     | Expr . LT Expr
   64     | PLUS Expr .

    $default  reduce using rule 64 (Expr)


State 59

   46 Expr: Expr . ASSIGN Expr
   47     | Expr . MUL Expr
   48     | Expr . DIV Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MOD Expr
   52     | Expr . AND Expr
   53     | Expr . OR Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . GE Expr
   60     | Expr . GT Expr
   61     | Expr . LE Expr
   62     | Expr . LT Expr
   63     | NOT Expr .

    $default  reduce using rule 63 (Expr)


State 60

   28 Statement: IF LPAR . ArgList RPAR StatementError
   29          | IF LPAR . ArgList RPAR StatementError ELSE StatementError

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    ArgList       go to state 97
    FunctionCall  go to state 47
    Expr          go to state 48
    IdToken       go to state 50


State 61

   30 Statement: WHILE LPAR . Expr RPAR StatementError

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 98
    IdToken       go to state 50


State 62

   32 Statement: RETURN SEMI .

    $default  reduce using rule 32 (Statement)


State 63

   31 Statement: RETURN Expr . SEMI
   46 Expr: Expr . ASSIGN Expr
   47     | Expr . MUL Expr
   48     | Expr . DIV Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MOD Expr
   52     | Expr . AND Expr
   53     | Expr . OR Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . GE Expr
   60     | Expr . GT Expr
   61     | Expr . LE Expr
   62     | Expr . LT Expr

    MINUS       shift, and go to state 76
    PLUS        shift, and go to state 77
    MUL         shift, and go to state 78
    DIV         shift, and go to state 79
    MOD         shift, and go to state 80
    BITWISEAND  shift, and go to state 81
    BITWISEOR   shift, and go to state 82
    BITWISEXOR  shift, and go to state 83
    AND         shift, and go to state 84
    OR          shift, and go to state 85
    EQ          shift, and go to state 86
    NE          shift, and go to state 87
    LE          shift, and go to state 88
    GE          shift, and go to state 89
    LT          shift, and go to state 90
    GT          shift, and go to state 91
    ASSIGN      shift, and go to state 92
    SEMI        shift, and go to state 99


State 64

   33 Statement: LBRACE error . RBRACE
   38 StatementError: error . SEMI

    RBRACE  shift, and go to state 100
    SEMI    shift, and go to state 101


State 65

   34 Statement: LBRACE RBRACE .

    $default  reduce using rule 34 (Statement)


State 66

   37 StatementError: Statement .

    $default  reduce using rule 37 (StatementError)


State 67

   25 Statement: LBRACE StatementList . RBRACE

    RBRACE  shift, and go to state 102


State 68

   35 StatementList: StatementError . StatementList
   36              | StatementError .

    error    shift, and go to state 103
    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    IF       shift, and go to state 33
    WHILE    shift, and go to state 34
    RETURN   shift, and go to state 35
    LBRACE   shift, and go to state 36
    LPAR     shift, and go to state 38
    SEMI     shift, and go to state 39
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    RBRACE  reduce using rule 36 (StatementList)

    Statement       go to state 66
    StatementList   go to state 104
    StatementError  go to state 68
    ArgList         go to state 46
    FunctionCall    go to state 47
    Expr            go to state 48
    IdToken         go to state 50


State 69

   68 Expr: LPAR error . RPAR

    RPAR  shift, and go to state 105


State 70

   40 ArgList: ArgList . COMMA Expr
   67 Expr: LPAR ArgList . RPAR

    COMMA  shift, and go to state 74
    RPAR   shift, and go to state 106


State 71

    7 FunctionBody: LBRACE DeclarationsAndStatements RBRACE .

    $default  reduce using rule 7 (FunctionBody)


State 72

   10 DeclarationsAndStatements: DeclarationsAndStatements Declaration .

    $default  reduce using rule 10 (DeclarationsAndStatements)


State 73

    9 DeclarationsAndStatements: DeclarationsAndStatements Statement .

    $default  reduce using rule 9 (DeclarationsAndStatements)


State 74

   40 ArgList: ArgList COMMA . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 107
    IdToken       go to state 50


State 75

   26 Statement: ArgList SEMI .

    $default  reduce using rule 26 (Statement)


State 76

   50 Expr: Expr MINUS . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 108
    IdToken       go to state 50


State 77

   49 Expr: Expr PLUS . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 109
    IdToken       go to state 50


State 78

   47 Expr: Expr MUL . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 110
    IdToken       go to state 50


State 79

   48 Expr: Expr DIV . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 111
    IdToken       go to state 50


State 80

   51 Expr: Expr MOD . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 112
    IdToken       go to state 50


State 81

   54 Expr: Expr BITWISEAND . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 113
    IdToken       go to state 50


State 82

   55 Expr: Expr BITWISEOR . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 114
    IdToken       go to state 50


State 83

   56 Expr: Expr BITWISEXOR . Expr

    MINUS    shift, and go to state 30
    PLUS     shift, and go to state 31
    NOT      shift, and go to state 32
    LPAR     shift, and go to state 38
    ID       shift, and go to state 18
    CHRLIT   shift, and go to state 40
    INTLIT   shift, and go to state 41
    REALLIT  shift, and go to state 42

    FunctionCall  go to state 47
    Expr          go to state 115
    IdToken       go to state 50


State 84

   52 Expr: Expr AND . Expr
